--- a/src/binary2.html
+++ b/src/binary2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Multi-class classification with TensorFlow.js</title>
+		<title>Binary classification with TensorFlow.js</title>
 		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis"></script>
 		<link
@@ -479,7 +479,7 @@
 		<div class="section no-pad-bot" id="index-banner">
 			<div class="container">
 				<h5 class="header center green-text small">
-					Multi-class classification with TensorFlow.js
+					Binary classification with TensorFlow.js
 				</h5>
 				<div class="row center">
 					<h6 class="header col s12 light">
